-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
3
-
5688
I did a quick search of the existing bugs, but didn't find this one.
Running the replay-single test in a single node VM setup I triggered the following:
LustreError: 14716:0:(ldlm_lib.c:1749:check_for_next_transno()) ASSERTION( req_transno >= next_transno ) failed: req_transno: 0, next_transno: 51539608157 LustreError: 14716:0:(ldlm_lib.c:1749:check_for_next_transno()) LBUG Kernel panic - not syncing: LBUG Pid: 14716, comm: tgt_recov Tainted: P --------------- 2.6.32-279.9.1.1chaos.ch5.1.x86_64 #1 Call Trace: [<ffffffff814fdceb>] ? panic+0xa0/0x168 [<ffffffffa0705f6b>] ? lbug_with_loc+0x9b/0xb0 [libcfs] [<ffffffffa0991e75>] ? check_for_next_transno+0x585/0x590 [ptlrpc] [<ffffffffa09918f0>] ? check_for_next_transno+0x0/0x590 [ptlrpc] [<ffffffffa098be0e>] ? target_recovery_overseer+0x5e/0x250 [ptlrpc] [<ffffffffa098a270>] ? exp_req_replay_healthy+0x0/0x30 [ptlrpc] [<ffffffffa0716591>] ? libcfs_debug_msg+0x41/0x50 [libcfs] [<ffffffffa0992f55>] ? target_recovery_thread+0x7b5/0x19d0 [ptlrpc] [<ffffffffa09927a0>] ? target_recovery_thread+0x0/0x19d0 [ptlrpc] [<ffffffff8100c14a>] ? child_rip+0xa/0x20 [<ffffffffa09927a0>] ? target_recovery_thread+0x0/0x19d0 [ptlrpc] [<ffffffffa09927a0>] ? target_recovery_thread+0x0/0x19d0 [ptlrpc] [<ffffffff8100c140>] ? child_rip+0x0/0x20
The test case was simply:
$ sudo ONLY="59 60" FSTYPE=zfs ./lustre/tests/replay-single.sh