LU-2397 recovery: check queue_len > 0 in check_for_next_transno

The check_for_next_transno rely on obd_req_replay_clients is unable
to change during that function call, it is not true.

Patch makes sure that case with zero queue_len is excluded and
check for obd_req_replay_clients is 0 after comparing with queue_len

Signed-off-by: Mikhail Pershin <mike.pershin@intel.com>
Change-Id: I0b81e0f8e6a4f2cbfd51b6a049ee273cec4732a2
Reviewed-on: http://review.whamcloud.com/4998
Tested-by: Hudson
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>